radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 7878
  selector:
    app: radarr
