radarr/radarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.teklogi.systems`)
      kind: Rule
      services:
        - name: radarr
          port: 80
